# volmatic-docklet

./: .gitignore  README.md  SettingsWindow.vala  SinkState.vala  VolmaticDock.vala  VolmaticDockItem.vala  VolmaticDockItemPreferences.vala  WpctlState.vala  meson.build  volmatic.gresource.xml
css/: volmatic.css
