project(
  'volmatic-docklet-',
  'vala',
  'c',
  version: '0.1.2',
)

# Dependencies
gtk_dep = dependency('gtk+-3.0')
gee = dependency('gee-0.8')
plank_dep = dependency('plank')
json_dep = dependency('json-glib-1.0')
i18n = import('i18n')

# Configure the build
customconf = configuration_data()
customconf.set('GETTEXT_PACKAGE', meson.project_name())

# Generate resource file
gnome = import('gnome')
resources = gnome.compile_resources('resources', 'volmatic.gresource.xml', source_dir: '.', c_name: 'resources')

add_project_arguments(
  [
    '-Wno-discarded-qualifiers',
    '-Wno-incompatible-pointer-types',
    '-Wno-unused',
    '-Wl,--enable-new-dtags',

    '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
  ],
  language: 'c',
)

# Source files
sources = [
  'VolmaticDock.vala',
  'VolmaticDockItem.vala',
  'VolmaticDockItemPreferences.vala',
  'SettingsWindow.vala',
  resources,
]

# Build the shared module
shared_module(
  'docklet-volmatic',
  sources,
  dependencies: [gtk_dep, plank_dep, gee, json_dep],
  install: true,
  #install_dir: join_paths(get_option('libdir'), 'plank/docklets'),
  install_dir: '/usr/lib/x86_64-linux-gnu/plank/docklets',
)
